welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:26: error: '<-' expected but integer literal found.
	faireV();for (n 1<- to 5){
                        ^PictureMono3:29: error: illegal start of simple expression
}
^